--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,8 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.2"
     debugImplementation "androidx.compose.ui:ui-tooling:1.3.2"
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.2"
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+
+    testImplementation "com.google.truth:truth:1.1.3"
 }
