--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,7 @@ dependencies {
 
     testImplementation "com.google.truth:truth:1.1.3"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
+
+    implementation "io.insert-koin:koin-androidx-compose:3.4.1"
+    testImplementation "io.insert-koin:koin-test-junit4:3.3.2"
 }
