--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.github.dach83.bin.InstrumentationTestRunner"
         vectorDrawables {
             useSupportLibrary true
         }
@@ -68,4 +68,11 @@ dependencies {
 
     implementation "io.insert-koin:koin-androidx-compose:3.4.1"
     testImplementation "io.insert-koin:koin-test-junit4:3.3.2"
+
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
 }
