--- a/sharedTestCode/build.gradle
+++ b/sharedTestCode/build.gradle
@@ -32,4 +32,7 @@ android {
 
 dependencies {
     implementation project(":app")
+
+    implementation "io.insert-koin:koin-androidx-compose:3.4.1"
+    testImplementation "io.insert-koin:koin-test-junit4:3.3.2"
 }
