--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.10.0"
 
     testImplementation project(":sharedTestCode")
     androidTestImplementation project(":sharedTestCode")
