--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -65,6 +66,7 @@ dependencies {
 
     testImplementation "com.google.truth:truth:1.1.3"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
+    testImplementation "io.mockk:mockk:1.13.3"
 
     implementation "io.insert-koin:koin-androidx-compose:3.4.1"
     testImplementation "io.insert-koin:koin-test-junit4:3.3.2"
@@ -78,5 +80,9 @@ dependencies {
 
     testImplementation project(":sharedTestCode")
     androidTestImplementation project(":sharedTestCode")
+
+    implementation "androidx.room:room-runtime:2.5.0"
+    implementation "androidx.room:room-ktx:2.5.0"
+    kapt "androidx.room:room-compiler:2.5.0"
 
 }
