Constants for dependencies versions

--- a/sharedTestCode/build.gradle
+++ b/sharedTestCode/build.gradle
@@ -31,8 +31,9 @@ android {
 }
 
 dependencies {
+    // Module
     implementation project(":app")
 
-    implementation "io.insert-koin:koin-androidx-compose:3.4.1"
-    testImplementation "io.insert-koin:koin-test-junit4:3.3.2"
+    // Koin
+    implementation "io.insert-koin:koin-androidx-compose:$koin_compose_version"
 }
