--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,24 @@
+buildscript {
+    ext {
+        android_core_version = '1.9.0'
+        compose_version = '1.3.2'
+        compose_material_version = '1.1.0-alpha03'
+        compose_activity_version = '1.6.1'
+        lifecycle_version = '2.5.1'
+        room_version = '2.5.0'
+        okhttp_version = '4.10.0'
+        retrofit_version = '2.9.0'
+        koin_compose_version='3.4.1'
+        koin_test_version='3.3.2'
+        junit_version = '4.13.2'
+        junit_ext_version = '1.1.5'
+        google_truth_version = '1.1.3'
+        coroutines_test_version = '1.6.1'
+        espresso_version = '3.5.1'
+        mockk_version = '1.13.3'
+    }
+}
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.1' apply false
